--- a/src/Makefile.win32
+++ b/src/Makefile.win32
@@ -19,7 +19,7 @@ CSRC  = sieve.c timer.c parse.c read_config.c mfaktc.c checkpoint.c \
 	signal_handler.c output.c
 CUSRC = tf_96bit.cu gpusieve.cu
 
-CUOBJS = $(CUSRC:.cu=.obj) tf_75bit.obj
+CUOBJS = $(CUSRC:.cu=.obj) tf_75bit.obj tf_64bit.obj
 COBJS  = $(CSRC:.c=.obj)
 
 LIBS = $(CUDA_DIR)\lib\Win32\cudart.lib
@@ -38,6 +38,9 @@ clean :
 
 %.obj : %.c
 	$(CC) $(CFLAGS) /c /Tp $<
+
+tf_64bit.o : tf_96bit.cu
+	nvcc -O2 -c $< -o $@ $(CUFLAGS) -DSHORTCUT_64BIT
 
 tf_75bit.obj : tf_96bit.cu
 	nvcc -O2 -c $< -o $@ $(CUFLAGS) -DSHORTCUT_75BIT
