--- a/src/Makefile.win32
+++ b/src/Makefile.win32
@@ -7,7 +7,6 @@ NVCCFLAGS = -m32 --ptxas-options=-v
 CUFLAGS = -ccbin="C:\Program Files (x86)\Microsoft Visual Studio 11.0\VC\bin" -Xcompiler /EHsc,/W3,/nologo,/Ox,/GL $(NVCCFLAGS)
 
 # generate code for various compute capabilities
-NVCCFLAGS += --generate-code arch=compute_11,code=sm_11 # CC 1.1, 1.2 and 1.3 GPUs will use this code (1.0 is not possible for mfaktc)
 NVCCFLAGS += --generate-code arch=compute_20,code=sm_20 # CC 2.x GPUs will use this code, one code fits all!
 NVCCFLAGS += --generate-code arch=compute_30,code=sm_30 # all CC 3.x GPUs _COULD_ use this code
 NVCCFLAGS += --generate-code arch=compute_35,code=sm_35 # but CC 3.5 (3.2?) _CAN_ use funnel shift which is useful for mfaktc
@@ -18,7 +17,7 @@ LFLAGS = /nologo /LTCG #/ltcg:pgo
 
 CSRC  = sieve.c timer.c parse.c read_config.c mfaktc.c checkpoint.c \
 	signal_handler.c output.c
-CUSRC = tf_72bit.cu tf_96bit.cu gpusieve.cu
+CUSRC = tf_96bit.cu gpusieve.cu
 
 CUOBJS = $(CUSRC:.cu=.obj) tf_75bit.obj
 COBJS  = $(CSRC:.c=.obj)
@@ -52,7 +51,7 @@ tf_75bit.obj : tf_96bit.cu
 checkpoint.obj: checkpoint.c params.h
 
 mfaktc.obj: mfaktc.c params.h my_types.h compatibility.h sieve.h \
- read_config.h parse.h timer.h tf_72bit.h tf_96bit.h \
+ read_config.h parse.h timer.h tf_96bit.h \
  checkpoint.h signal_handler.h output.h gpusieve.h \
  selftest-data-mersenne.c
 
@@ -67,9 +66,6 @@ sieve.obj: sieve.c params.h compatibility.h
 signal_handler.obj: signal_handler.c params.h my_types.h compatibility.h
 
 timer.obj: timer.c timer.h compatibility.h
-
-tf_72bit.obj: tf_72bit.cu params.h my_types.h compatibility.h \
- my_intrinsics.h sieve.h timer.h output.h tf_debug.h tf_common.cu
 
 tf_96bit.obj: tf_96bit.cu params.h my_types.h compatibility.h \
  my_intrinsics.h sieve.h timer.h output.h tf_96bit_base_math.cu \
