Add base to output

--- a/mfaktc.ini
+++ b/mfaktc.ini
@@ -198,6 +198,7 @@ TimeStampInResults=0
 #  %T - time (HH:MM)                   "%H:%M"  (strftime format)
 #  %U - username (as configured)       "%s"     no fixed width
 #  %H - hostname (as configured)       "%s"     no fixed width
+#  %B - the repunit base               "%-10u"
 #  %M - the exponent being worked on   "%-10u"
 #  %l - the lower bit-limit            "%2d"
 #  %u - the upper bit-limit            "%2d"
@@ -210,8 +211,8 @@ TimeStampInResults=0
 # sieving counts the numbers after the sieving process.
 #
 
-ProgressHeader=Date    Time | class   Pct |   time     ETA | GHz-d/day    Sieve  | Exp    bit-range
-ProgressFormat=%d %T | %C %p%% | %t  %e |   %g  %s  | %M %l:%u
+ProgressHeader=Date    Time | class   Pct |   time     ETA | GHz-d/day    Sieve  | Exp        Base        bit-range
+ProgressFormat=%d %T | %C %p%% | %t  %e |   %g  %s  | %M %B %l:%u
 
 # mfaktc 0.20+ (default)
 #ProgressHeader=Date    Time | class   Pct |   time     ETA | GHz-d/day    Sieve     Wait
