Use link instead of absolute path to cuda

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 # where is the CUDA Toolkit installed?
-CUDA_DIR = /usr/local/cuda-7.5
+CUDA_DIR = /usr/local/cuda
 CUDA_INCLUDE = -I$(CUDA_DIR)/include/
 CUDA_LIB = -L$(CUDA_DIR)/lib64/
 
@@ -9,7 +9,7 @@ CFLAGS = -Wall -Wextra -O2 $(CUDA_INCLUDE) -malign-double
 CFLAGS_EXTRA_SIEVE = -funroll-all-loops
 
 # Compiler settings for .cu files (CPU/GPU)
-NVCC = /usr/local/cuda-7.5/bin/nvcc
+NVCC = $(CUDA_DIR)/bin/nvcc
 NVCCFLAGS = $(CUDA_INCLUDE) --ptxas-options=-v
 
 # generate code for various compute capabilities
