--- a/src/Makefile.win
+++ b/src/Makefile.win
@@ -11,6 +11,7 @@ NVCCFLAGS += --generate-code arch=compute_20,code=sm_20 # CC 2.x GPUs will use t
 NVCCFLAGS += --generate-code arch=compute_30,code=sm_30 # all CC 3.x GPUs _COULD_ use this code
 NVCCFLAGS += --generate-code arch=compute_35,code=sm_35 # but CC 3.5 (3.2?) _CAN_ use funnel shift which is useful for mfaktc
 NVCCFLAGS += --generate-code arch=compute_50,code=sm_50 # CC 5.x GPUs will use this code
+#NVCCFLAGS += --generate-code arch=compute_61,code=sm_61 # CC 6.x GPUs will use this code
 
 LINK = link
 LFLAGS = /nologo /LTCG #/ltcg:pgo
