Adapt output line

--- a/mfaktc.ini
+++ b/mfaktc.ini
@@ -210,9 +210,12 @@ TimeStampInResults=0
 # sieving counts the numbers after the sieving process.
 #
 
+ProgressHeader=Date    Time | class   Pct |   time     ETA | GHz-d/day    Sieve  | Exp       bit-range
+ProgressFormat=%d %T | %C %p%% | %t  %e |   %g  %s  | %M %l:%u
+
 # mfaktc 0.20+ (default)
-ProgressHeader=Date    Time | class   Pct |   time     ETA | GHz-d/day    Sieve     Wait
-ProgressFormat=%d %T | %C %p%% | %t  %e |   %g  %s  %W%%
+#ProgressHeader=Date    Time | class   Pct |   time     ETA | GHz-d/day    Sieve     Wait
+#ProgressFormat=%d %T | %C %p%% | %t  %e |   %g  %s  %W%%
 
 # old mfaktc 0.18/0.19 style
 #
