--- a/src/Makefile.win
+++ b/src/Makefile.win
@@ -1,23 +1,30 @@
-CUDA_DIR = "C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.1"
+CUDA_DIR = "C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.4"
 
 CC = cl
-CFLAGS = /Ox /Oy /GL /W2 /fp:fast /I$(CUDA_DIR)\include /I$(CUDA_DIR)\include\cudart /nologo
+CFLAGS = /Ox /Oy /W2 /fp:fast /I$(CUDA_DIR)\include /I$(CUDA_DIR)\include\cudart /nologo
 
 NVCCFLAGS = -m64 --ptxas-options=-v
-CUFLAGS = -ccbin="C:\Program Files (x86)\Microsoft Visual Studio 11.0\VC\bin" -DWIN64 -Xcompiler /EHsc,/W3,/nologo,/Ox,/GL $(NVCCFLAGS)
+CUFLAGS = -DWIN64 -Xcompiler /EHsc,/W3,/nologo,/Ox $(NVCCFLAGS)
 
-# generate code for various compute capabilities
-#NVCCFLAGS += --generate-code arch=compute_20,code=sm_20 # CC 2.x GPUs will use this code, one code fits all!
-#NVCCFLAGS += --generate-code arch=compute_30,code=sm_30 # all CC 3.x GPUs _COULD_ use this code
-#NVCCFLAGS += --generate-code arch=compute_35,code=sm_35 # but CC 3.5 (3.2?) _CAN_ use funnel shift which is useful for mfaktc
-NVCCFLAGS += --generate-code arch=compute_50,code=sm_50 # CC 5.x GPUs will use this code
-NVCCFLAGS += --generate-code arch=compute_60,code=sm_60 # CC 6.0 GPUs will use this code
-NVCCFLAGS += --generate-code arch=compute_61,code=sm_61 # CC 6.1 GPUs will use this code
-NVCCFLAGS += --generate-code arch=compute_70,code=sm_70 # CC 7.x GPUs will use this code
-NVCCFLAGS += --generate-code arch=compute_75,code=sm_75 # CC 7.5 GPUs will use this code
+############################################################
+
+NVCCFLAGS += --generate-code arch=compute_90,code=sm_90
+NVCCFLAGS += --generate-code arch=compute_89,code=sm_89
+NVCCFLAGS += --generate-code arch=compute_87,code=sm_87
+NVCCFLAGS += --generate-code arch=compute_86,code=sm_86
+NVCCFLAGS += --generate-code arch=compute_80,code=sm_80
+NVCCFLAGS += --generate-code arch=compute_75,code=sm_75
+NVCCFLAGS += --generate-code arch=compute_72,code=sm_72
+NVCCFLAGS += --generate-code arch=compute_70,code=sm_70
+NVCCFLAGS += --generate-code arch=compute_62,code=sm_62
+NVCCFLAGS += --generate-code arch=compute_61,code=sm_61
+NVCCFLAGS += --generate-code arch=compute_60,code=sm_60
+NVCCFLAGS += --generate-code arch=compute_50,code=sm_50
+
+############################################################
 
 LINK = link
-LFLAGS = /nologo /LTCG #/ltcg:pgo
+LFLAGS = /nologo
 
 CSRC  = sieve.c timer.c parse.c read_config.c mfaktc.c checkpoint.c \
 	signal_handler.c output.c
@@ -26,7 +33,7 @@ CUSRC = tf_96bit.cu gpusieve.cu
 CUOBJS = $(CUSRC:.cu=.obj) tf_75bit.obj tf_64bit.obj
 COBJS  = $(CSRC:.c=.obj)
 
-LIBS = $(CUDA_DIR)\lib\x64\cudart.lib
+LIBS = $(CUDA_DIR)\lib\x64\cudart_static.lib
 
 ############################################################################################################
 
