Adapt ini file, give reason on lowering SievePrimes and upper bound

--- a/mfaktc.ini
+++ b/mfaktc.ini
@@ -6,7 +6,11 @@
 #
 # Default: SievePrimes=25000
 
-SievePrimes=25000
+# Larger than 9592 will cause some tests with CPU sieve to fail, reason is not yet clear
+# works for default selftest.txt, 18975 will cause some test to fail
+#SievePrimes=18974
+# works for all previously failing selftest.txt files
+SievePrimes=9592
 
 
 # Set this to 1 to enable automatically adjustments of SievePrimes during
@@ -28,7 +32,8 @@ SievePrimesAdjust=1
 #          SievePrimesMax=100000
 
 SievePrimesMin=5000
-SievePrimesMax=100000
+# For now we limit the uppoer bound to the largest value where no test will fail
+SievePrimesMax=9592
 
 
 # Set the number of CUDA streams / data sets used by mfaktc.
