Default base can now be set in mfaktc.ini

--- a/mfaktc.ini
+++ b/mfaktc.ini
@@ -1,3 +1,11 @@
+# Set this to the base that should be used for worktodo.txt files if no 'base=' parameter
+# is given.
+#
+# Default: DefaultBase=10
+
+DefaultBase=10
+
+
 # SievePrimes defines how far the factor candidates (FCs) are presieved on
 # the CPU. The first <SievePrimes> odd primes are used to sieve the FCs.
 #
